--- a/vote-app-deployment/templates/deployment.yaml
+++ b/vote-app-deployment/templates/deployment.yaml
@@ -40,6 +40,9 @@ spec:
             - name: http
               containerPort: {{ .Values.service.port }}
               protocol: TCP
+          env:
+            - name: "REDIS"
+              value: "redis.redis.svc.cluster.local"
           livenessProbe:
             httpGet:
               path: /
