--- a/J2/.github/workflows/on_pull_request.yml
+++ b/J2/.github/workflows/on_pull_request.yml
@@ -36,14 +36,14 @@ jobs:
 
     - name: Run `packer init`
       id: init
-      run: "packer init ./docker-voting-app.pkr.hcl"
+      run: "packer init ./Packer/docker-voting-app.pkr.hcl"
 
     - name: Run `packer validate`
       id: validate
-      run: "packer validate ./docker-voting-app.pkr.hcl"
+      run: "packer validate ./Packer/docker-voting-app.pkr.hcl"
 
     - name: Build Artifact
-      run: packer build -color=false -on-error=abort ./docker-voting-app.pkr.hcl
+      run: packer build -color=false -on-error=abort ./Packer/docker-voting-app.pkr.hcl
     
   IntegrationTests:
     runs-on: ubuntu-latest
