--- a/J3/Helm/vote-app-deployment/values.yaml
+++ b/J3/Helm/vote-app-deployment/values.yaml
@@ -5,17 +5,10 @@
 replicaCount: 1
 
 image:
-<<<<<<< HEAD
   repository: joffreydupire/simplon-voting-app
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: ""
-=======
-  repository: joffreydupire/build-voting-app
-  pullPolicy: IfNotPresent
-  # Overrides the image tag whose default is the chart appVersion.
   tag: "latest"
->>>>>>> 2b3163f (Add Helm chart)
 
 imagePullSecrets: []
 nameOverride: ""
@@ -39,25 +32,21 @@ securityContext:
   capabilities:
   #   drop:
   #   - ALL
-<<<<<<< HEAD
-  readOnlyRootFilesystem: true
-  runAsNonRoot: true
-=======
   readOnlyRootFilesystem: false
   runAsNonRoot: false
->>>>>>> 2b3163f (Add Helm chart)
   # runAsUser: 1000
 
 service:
   type: ClusterIP
   port: 80
+  env:
+    - name: "REDIS"
+      value: "redis-master.redis.svc.cluster.local"
+    - name: "REDIS_PWD"
+      value: "plop"
 
 ingress:
-<<<<<<< HEAD
   enabled: true
-=======
-  enabled: false
->>>>>>> 2b3163f (Add Helm chart)
   className: "nginx"
   annotations: {}
   hosts:
@@ -66,12 +55,9 @@ ingress:
         - path: /
           pathType: ImplementationSpecific
   tls: []
-<<<<<<< HEAD
   #  - secretName: chart-example-tls
   #    hosts:
   #      - chart-example.local
-=======
->>>>>>> 2b3163f (Add Helm chart)
 
 resources:
    limits:
