--- a/.github/workflows/on_pull_request_closed_J1.yml
+++ b/.github/workflows/on_pull_request_closed_J1.yml
@@ -11,17 +11,19 @@ on:
     - J5/*
 
 jobs:
-  Publish_Release:
-    name: Build
+  SemVer:
+    name: Semantic Release Version
     runs-on: ubuntu-latest
+    outputs:
+      version: ${{ steps.semantic.outputs.new_release_version }}
     steps:
-      - name: Checkout
+      - name: Checkout the code
         uses: actions/checkout@v3
         with:
           persist-credentials: false
           fetch-depth: 0
 
-      - name: Release
+      - name: Get Release Version Number
         uses: cycjimmy/semantic-release-action@v2
         id: semantic
         with:
@@ -32,6 +34,32 @@ jobs:
             conventional-changelog-conventionalcommits@4.6.3
         env:
           GITHUB_TOKEN: ${{ secrets.SEMANTIC_RELEASE }}
+  
+  Lint_And_Security:
+    name: Check Lint and Security of the code
+    runs-on: ubuntu-latest
+    env:
+      working-directory: ./J1
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Python Lint
+        working-directory: ${{env.working-directory}}
+        run: |
+          pip install flake8
+          flake8 azure-vote/main.py
+
+      - name: Is secure ?
+        working-directory: ${{env.working-directory}}
+        run: |
+          pip install safety
+          safety check -r azure-vote/main.py
+
+  Build_And_Publish:
+    name: Build Docker Image and Publish to Registry
+    runs-on: ubuntu-latest
+    needs: [SemVer, Lint_And_Security]
+    steps:
     
       - name: Login to Docker Hub
         uses: docker/login-action@v2
@@ -48,4 +76,4 @@ jobs:
           context: ./J1/
           file: ./Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/${{ github.event.repository.name }}:v${{ steps.semantic.outputs.new_release_version }}
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/${{ github.event.repository.name }}:v${{ needs.SemVer.outputs.verison }}
