--- a/.github/workflows/on_pull_request_closed_J1.yml
+++ b/.github/workflows/on_pull_request_closed_J1.yml
@@ -59,6 +59,8 @@ jobs:
     name: Build Docker Image and Publish to Registry
     runs-on: ubuntu-latest
     needs: [SemVer, Lint_And_Security]
+    env:
+      working-directory: ./J1
     steps:
     
       - name: Login to Docker Hub
@@ -73,7 +75,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v4
         with:
-          context: ./J1/
+          context: .
           file: ./Dockerfile
           push: true
           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/${{ github.event.repository.name }}:v${{ needs.SemVer.outputs.verison }}
