--- a/.github/workflows/on_pull_request_closed_J1.yml
+++ b/.github/workflows/on_pull_request_closed_J1.yml
@@ -75,7 +75,6 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v4
         with:
-          context: .
-          file: ./Dockerfile
+          context: ./J1
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/${{ github.event.repository.name }}:v${{ needs.SemVer.outputs.verison }}
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/${{ github.event.repository.name }}:v${{ needs.SemVer.outputs.version }}
