--- a/.github/workflows/on_pull_request_closed_J1.yml
+++ b/.github/workflows/on_pull_request_closed_J1.yml
@@ -62,7 +62,11 @@ jobs:
     env:
       working-directory: ./J1
     steps:
-    
+      - name: Checkout the code
+        uses: actions/checkout@v3
+        with:
+          persist-credentials: false
+          fetch-depth: 0
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
