--- a/.github/workflows/on_pull_request_closed_J1.yml
+++ b/.github/workflows/on_pull_request_closed_J1.yml
@@ -15,7 +15,9 @@ jobs:
     name: Semantic Release Version
     runs-on: ubuntu-latest
     outputs:
-      version: ${{ steps.semantic.outputs.new_release_version }}
+      new_version: ${{ steps.semantic.outputs.new_release_version }}
+      old_version: ${{ steps.semantic.outputs.last_release_version }}
+      is_released: ${{ steps.semantic.outputs.new_release_published }}
     steps:
       - name: Checkout the code
         uses: actions/checkout@v3
@@ -78,7 +80,16 @@ jobs:
   
       - name: Build and push
         uses: docker/build-push-action@v4
+        if: needs.SemVer.outputs.is_released == 'true'
         with:
           context: ./J1
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/${{ github.event.repository.name }}:v${{ needs.SemVer.outputs.version }}
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/${{ github.event.repository.name }}:v${{ needs.SemVer.outputs.new_version }}
+      
+      - name: Build and push
+        uses: docker/build-push-action@v4
+        if: needs.SemVer.outputs.is_released != 'true'
+        with:
+          context: ./J1
+          push: true
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/${{ github.event.repository.name }}:v${{ needs.SemVer.outputs.old_version }}
