--- a/.github/workflows/on_pull_request_closed_J1.yml
+++ b/.github/workflows/on_pull_request_closed_J1.yml
@@ -88,7 +88,7 @@ jobs:
       
       - name: Build and push
         uses: docker/build-push-action@v4
-        if: needs.SemVer.outputs.is_released != 'true'
+        if: needs.SemVer.outputs.is_released == 'false'
         with:
           context: ./J1
           push: true
