--- a/.github/workflows/on_pull_request_closed_J2.yml
+++ b/.github/workflows/on_pull_request_closed_J2.yml
@@ -11,17 +11,21 @@ on:
     - J5/*
 
 jobs:
-  Publish_Release:
-    name: Build
+  SemVer:
+    name: Semantic Release Version
     runs-on: ubuntu-latest
+    outputs:
+      new_version: ${{ steps.semantic.outputs.new_release_version }}
+      old_version: ${{ steps.semantic.outputs.last_release_version }}
+      is_released: ${{ steps.semantic.outputs.new_release_published }}
     steps:
-      - name: Checkout
+      - name: Checkout the code
         uses: actions/checkout@v3
         with:
           persist-credentials: false
           fetch-depth: 0
 
-      - name: Release
+      - name: Get Release Version Number
         uses: cycjimmy/semantic-release-action@v2
         id: semantic
         with:
@@ -32,19 +36,62 @@ jobs:
             conventional-changelog-conventionalcommits@4.6.3
         env:
           GITHUB_TOKEN: ${{ secrets.SEMANTIC_RELEASE }}
-      
+  
+  Lint_And_Security:
+    name: Check Lint and Security of the code
+    runs-on: ubuntu-latest
+    env:
+      working-directory: ./J2
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Python Lint
+        working-directory: ${{env.working-directory}}
+        run: |
+          pip install flake8
+          flake8 azure-vote/main.py
+
+      - name: Is secure ?
+        working-directory: ${{env.working-directory}}
+        run: |
+          pip install safety
+          safety check -r azure-vote/main.py
+
+  Build_And_Publish:
+    name: Build Docker Image and Publish to Registry
+    runs-on: ubuntu-latest
+    needs: [SemVer, Lint_And_Security]
+    env:
+      working-directory: ./J2
+    steps:
+      - name: Checkout the code
+        uses: actions/checkout@v3
+        with:
+          persist-credentials: false
+          fetch-depth: 0
+
       - name: Setup `packer`
         uses: hashicorp/setup-packer@main
         with:
           version: "latest"
-    
+      
       - name: Run `packer init`
         id: init
-        run: "packer init ./J2/Packer/docker-voting-app.pkr.hcl"
+        run: "packer init ./${{env.working-directory}}/Packer/voting-app.pkr.hcl"
   
       - name: Run `packer validate`
         id: validate
-        run: "packer validate ./J2/Packer/docker-voting-app.pkr.hcl"
+        run: "packer validate \
+          -var docker_username=${{secrets.DOCKER_HUB_USERNAME}} \
+          -var docker_pat=${{secrets.DOCKER_HUB_PAT}} \
+          -var semantic_release_version=${{needs.SemVer.outputs.new_version}} \
+          -var repository=${{github.event.repository.name}} \
+          ./${{env.working-directory}}/Packer/voting-app.pkr.hcl"
   
       - name: Build Artifact
-        run: packer build -color=false -on-error=abort ./J2/Packer/docker-voting-app.pkr.hcl
+        run: packer build -color=false -on-error=abort \
+          -var "docker_username=${{secrets.DOCKER_HUB_USERNAME}}" \
+          -var "docker_pat=${{secrets.DOCKER_HUB_PAT}}" \
+          -var "semantic_release_version=${{needs.SemVer.outputs.new_version}}" \
+          -var "repository=${{github.event.repository.name}}" \
+          ./${{env.working-directory}}/Packer/voting-app.pkr.hcl
