fix: playbook code copy

--- a/J2/Ansible/playbook.yml
+++ b/J2/Ansible/playbook.yml
@@ -14,5 +14,5 @@
   tasks:
     - name: "Copy source code to container"
       copy:
-        src: "./azure-vote"
+        src: "../azure-vote"
         dest: "/app"
