--- a/J1/Dockerfile
+++ b/J1/Dockerfile
@@ -1,5 +1,5 @@
-FROM tiangolo/uwsgi-nginx-flask:python3.6
-RUN pip install redis
+FROM --platform=linux/amd64 tiangolo/uwsgi-nginx-flask:python3.6
+RUN pip install redis requests
 ADD /azure-vote /app
 
 HEALTHCHECK --interval=5m --timeout=3s \
